# trade_bot

./: .env  Cargo.toml  README.md
src/: lib.rs
src/coinbase/: coinbase.rs  coinbase_impl.rs  mod.rs
src/kraken/: kraken.rs  kraken_impl.rs  mod.rs
src/kraken/api/: api.rs  api_impl.rs  error.rs  methods.rs  mod.rs  types.rs  utils.rs
src/tradingbot/: market.rs  mod.rs  tradingbot.rs  tradingbot_impl_pub.rs
